Website fixing banner and header jump on load (#164)
* fix: fixing banner and header jump

* fix: adjusting nav text vertical position

* fix: reverting font size

* fix: remove redundant styling

* fix: remove redundant styling

* fix: override global margin on list item

* fix: prevent banner text jump

--- a/www/components/banner/banner.css
+++ b/www/components/banner/banner.css
@@ -19,7 +19,6 @@
 }
 
 :host {
-  grid-area: banner;
 
   & .banner {
     background-color: #F6F2F4;
@@ -45,7 +44,13 @@
         text-shadow: 1px 1px rgba(0, 0, 0, 0.6);
       }
       & h3 {
+        padding-top: 10px;
         text-shadow: 1px 1px rgba(0, 0, 0, 0.6);
+      }
+
+      & img {
+        width: 300px;
+        height: 300px;
       }
     }
 
@@ -64,9 +69,12 @@
 
       & .content {
         font-size: 1.5rem;
-
         & h1 {
           font-size: 3rem;
+        }
+        & img {
+          width: 250px;
+          height: 250px;
         }
       }
     }
